--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -66,15 +66,15 @@ right=0.7in
     \hspace*{-18pt} \hrulefill \\
 }
 
-% \newcommand{\header} [1] {
-%     \vspace{0.5mm}
-%     {\textsc{\textbf{\Large{\xrfill[0.5ex]{0.5pt}~#1~\xrfill[0.5ex]{0.5pt}}}}} % center and underline
-% }
-
 \newcommand{\header} [1] {
     \vspace{0.5mm}
-    {\textsc{\textbf{\Large{#1\xrfill[0.0ex]{0.5pt}}}}}
+    {\textsc{\textbf{\Large{\xrfill[0.5ex]{0.5pt}~#1~\xrfill[0.5ex]{0.5pt}}}}} % center and underline
 }
+
+% \newcommand{\header} [1] {
+%     \vspace{0.5mm}
+%     {\textsc{\textbf{\Large{#1\xrfill[0.0ex]{0.5pt}}}}}
+% }
 
 \newcommand{\employer} [3] {
     { \textsc{#1} (#2)\\ \underline{\textsc{\textit{#3}}}\\  }
