--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -115,20 +115,20 @@ right=0.7in
 % \vspace*{0.5mm}
 \begin{raggedright}
     {\Huge\textbf\textsc{{{Don Lim}}}} \hfill
-    \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} \ding{118} (806) 317-7937 \ding{118} \href{https://donlim93.github.io/}{https://donlim93.github.io} \ding{118} \href{https://www.linkedin.com/in/lim-don/}{https://www.linkedin.com/in/lim-don} \\ \vspace{2mm}
+    \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} | (806) 317-7937 | \href{https://donlim93.github.io/}{https://donlim93.github.io} | \href{https://www.linkedin.com/in/lim-don/}{https://www.linkedin.com/in/lim-don} \\ \vspace{2mm}
 \end{raggedright}
 %==== Experience ====%
 
 \header{Work and Research Experience} \\
 \vspace{0.5mm}
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
-\textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Present} \\
+\textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Oct 2025} \\
 % \hfill \textit{(Unofficially assisted starting Oct 2023)}
 \begin{itemize}
-    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git); enhancing processes to allow for daily instead of biannual forecasting cycles
-    \item Managing and restoring Git repository backups for processes and rules, including compiling quarterly reports on change tracking and change management for SOX/ITGC audit controls
-    \item Programmatically creating and manipulating 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views in IBM TM1/Planning Analytics development, UAT, and production environments using mutltidimensional expressions (MDX), SQL, TurboIntegrator (TI) processes, and TM1 rules
-    \item Extracting, transforming, and loading (ETL) job scrub, P/L, SGM, GL, KPIs, statistical entries, and budget data while automating calculations for actual and forecasted cash flows, KPIs, and milestones for financial models and reporting 
+    \item Developed IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git); enhancing processes to allow for daily instead of biannual forecasting cycles
+    \item Managed and restored Git repository backups for processes and rules, including compiling quarterly reports on change tracking and change management for SOX/ITGC audit controls
+    \item Programmatically created, manipulated, and maintained 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views into IBM TM1/Planning Analytics development, UAT, and production environments using a combination of mutltidimensional expressions (MDX), SQL, TurboIntegrator (TI) processes, and TM1 rules
+    \item Extracted, transformed, and loaded (ETL) job scrub, P\&L, SGM, GL, KPIs, statistical entries, and budget data while automating entries for actual and calculating forecasted cash flows, KPIs, and milestones for financial models and reporting 
 \end{itemize}
 \vspace{0.5mm}
 
