--- a/cv/cv IT/DonLim_resumeCV.tex
+++ b/cv/cv IT/DonLim_resumeCV.tex
@@ -52,7 +52,7 @@ right=0.7in
 \renewcommand\familydefault{\sfdefault}
 
 \renewcommand{\hrulefill}{%
-  \leavevmode\leaders\hrule height 0.3pt\hfill\kern0pt }
+\leavevmode\leaders\hrule height 0.3pt\hfill\kern0pt }
 
 \newcommand{\area} [2] {
     \vspace*{-9pt}
@@ -119,7 +119,10 @@ right=0.7in
 \end{raggedright}
 %==== Experience ====%
 
-\header{Work and Research Experience} \\
+IT professional with expertise in enterprise systems, data integration, and troubleshooting across finance and operations. Skilled in IBM TM1/Planning Analytics, SQL, Python, and Salesforce, with experience in ETL automation, system administration, and performance optimization. Adept at building and maintaining scalable solutions that enhance forecasting, reporting, and data accuracy. Transitioned from IT into financial systems to apply technical, analytical, and problem-solving skills in business-critical environments. Pursued a Ph.D. at Texas Tech University before earning a terminal master’s degree focused on econometrics and optimization. \\
+
+\vspace{0.5mm}
+\header{Work Experience} \\
 \vspace{0.5mm}
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Oct 2025} \\
@@ -150,42 +153,6 @@ right=0.7in
 \end{itemize}    
 \vspace{0.5mm}
 
-\textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
-\textit{Economic Research Assistant} \hfill  \textit{Aug 2020 --- May 2022} \\
-% \begin{itemize}
-%     \item Investigated relevant literature for, revised, and edited book chapters and journal articles
-% \end{itemize}
-\vspace{0.5mm}
-
-\textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
-\textit{EC Harwood Visiting Research Fellow} \hfill  \textit{Dec 2018 --- May 2019}\\
-\vspace{0.5mm}
-
-\textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
-\textit{Visiting Research Scholar} \hfill  \textit{Sep 2018 --- Dec 2018}\\
-% \begin{itemize}
-%     \item Researched and presented master's thesis: economic analysis of open-source communities
-% \end{itemize}
-\vspace{0.5mm}
-
-\textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
-\textit{Research Fellow} \hfill  \textit{Jan 2017 --- May 2017}\\
-% \begin{itemize}
-%     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
-%     \item Wrote and edited two weekly publications regarding Pennsylvania's budget and education policy
-%     \item Responded to daily email inquiries regarding subsidies, right-to-work laws, and the state budget
-% \end{itemize}
-\vspace{0.5mm}
-
-\textbf{Cato Institute} \hfill Washington, DC\\
-\textit{Intern Researcher at the Center for Educational Freedom} \hfill \textit{Sep 2016 --- Dec 2016}\\
-% \begin{itemize}
-%     \item Compiled and examined TIMSS and PISA datasets related to national education policy
-%     \item Summarized Capitol Hill proceedings regarding foreign affairs, trade, monetary, and education
-%     \item Produced over 200 Twitter/X posts on @HumanProgress
-% \end{itemize}
-\vspace{0.5mm}
-
 %==== Education ====%
 
 \header{Education} \\
@@ -212,29 +179,114 @@ right=0.7in
 \textit{Bachelor of Arts in General Studies (Political Science, Philosophy, and History)} \hfill  \textit{Apr 2016}\\
 
 \vspace{0.5mm}
+
+\header{Research Experience} \\
+\vspace{0.5mm}
+% % \textbf{Various research poisitions}
+% \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
+% \textit{Economic Research Assistant} \hfill  \textit{Aug 2020 --- May 2022} \\
+% % \begin{itemize}
+% %     \item Investigated relevant literature for, revised, and edited book chapters and journal articles
+% % \end{itemize}
+% \vspace{0.5mm}
+
+% \textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
+% \textit{EC Harwood Visiting Research Fellow} \hfill  \textit{Dec 2018 --- May 2019}\\
+% \vspace{0.5mm}
+
+% \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
+% \textit{Visiting Research Scholar} \hfill  \textit{Sep 2018 --- Dec 2018}\\
+% % \begin{itemize}
+% %     \item Researched and presented master's thesis: economic analysis of open-source communities
+% % \end{itemize}
+% \vspace{0.5mm}
+
+% \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
+% \textit{Research Fellow} \hfill  \textit{Jan 2017 --- May 2017}\\
+% % \begin{itemize}
+% %     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
+% %     \item Wrote and edited two weekly publications regarding Pennsylvania's budget and education policy
+% %     \item Responded to daily email inquiries regarding subsidies, right-to-work laws, and the state budget
+% % \end{itemize}
+% \vspace{0.5mm}
+
+% \textbf{Cato Institute} \hfill Washington, DC\\
+% \textit{Intern Researcher at the Center for Educational Freedom} \hfill \textit{Sep 2016 --- Dec 2016}\\
+% % \begin{itemize}
+% %     \item Compiled and examined TIMSS and PISA datasets related to national education policy
+% %     \item Summarized Capitol Hill proceedings regarding foreign affairs, trade, monetary, and education
+% %     \item Produced over 200 Twitter/X posts on @HumanProgress
+% % \end{itemize}
+% \vspace{0.5mm}
+
+\textbf{Free Market Institute, Texas Tech University} \hfill \textit{Aug 2020 --- May 2022} \\
+% \end{itemize}
+
+\textbf{American Institute for Economic Research} \hfill \textit{Dec 2018 --- May 2019}\\
+
+\textbf{Free Market Institute, Texas Tech University} \hfill  \textit{Sep 2018 --- Dec 2018}\\
+% \begin{itemize}
+%     \item Researched and presented master's thesis: economic analysis of open-source communities
+% \end{itemize}
+
+\textbf{Commonwealth Foundation} \hfill \textit{Jan 2017 --- May 2017}\\
+% \begin{itemize}
+%     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
+%     \item Wrote and edited two weekly publications regarding Pennsylvania's budget and education policy
+%     \item Responded to daily email inquiries regarding subsidies, right-to-work laws, and the state budget
+% \end{itemize}
+
+\textbf{Cato Institute} \hfill \textit{Sep 2016 --- Dec 2016}\\
+% \begin{itemize}
+%     \item Compiled and examined TIMSS and PISA datasets related to national education policy
+%     \item Summarized Capitol Hill proceedings regarding foreign affairs, trade, monetary, and education
+%     \item Produced over 200 Twitter/X posts on @HumanProgress
+% \end{itemize}
+\vspace{0.5mm}
 %==== Certificates ====%
 
 \header{Certifications and Exams} \\
 \vspace{0.5mm}
+% \begin{itemize}
+%     \item PostgreSQL for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/LDV5VWF4QFUE}{LDV5VWF4QFUE}) \hfill Coursera, \textit{May 2024}
+%     \begin{itemize}
+%         \item PostgreSQL, DBeaver, NoSQL, Elasticsearch
+%     \end{itemize}
+%     \item Web Applications for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/K85V99DMXY4U}{K85V99DMXY4U}) \hfill Coursera, \textit{Oct 2023}
+%     \begin{itemize}
+%         \item MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
+%     \end{itemize}
+%     \item Applied Data Science with Python Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill Coursera, \textit{Aug 2023}
+%     \begin{itemize}
+%         \item Python (regex, NumPy, Pandas, scikit-learn, Matplotlib, Seaborn, NLTK, NetworkX), gradient descent, random forest, decision tree, SVC, linear and logistic regression, Lasso, KNN, Na\"{i}ve Bayes, clustering
+%     \end{itemize}
+%     \item Django for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) \hfill Coursera, \textit{Jul 2023}
+%     \begin{itemize}
+%         \item Django, SQLite3, HTML5, CSS, JavaScript, Bash
+%     \end{itemize}
+%     \item Passed Probability exam \hfill Society of Actuaries, \textit{May 2023}
+% \end{itemize}
+
 \begin{itemize}
-    \item PostgreSQL for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/LDV5VWF4QFUE}{LDV5VWF4QFUE}) \hfill Coursera, \textit{May 2024}
+    \item PostgreSQL for Everybody Specialization \hfill Coursera, \textit{May 2024}
     \begin{itemize}
         \item PostgreSQL, DBeaver, NoSQL, Elasticsearch
     \end{itemize}
-    \item Web Applications for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/K85V99DMXY4U}{K85V99DMXY4U}) \hfill Coursera, \textit{Oct 2023}
+    \item Web Applications for Everybody Specialization \hfill Coursera, \textit{Oct 2023}
     \begin{itemize}
         \item MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
     \end{itemize}
-    \item Applied Data Science with Python Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill Coursera, \textit{Aug 2023}
+    \item Applied Data Science with Python Specialization \hfill Coursera, \textit{Aug 2023}
     \begin{itemize}
         \item Python (regex, NumPy, Pandas, scikit-learn, Matplotlib, Seaborn, NLTK, NetworkX), gradient descent, random forest, decision tree, SVC, linear and logistic regression, Lasso, KNN, Na\"{i}ve Bayes, clustering
     \end{itemize}
-    \item Django for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) \hfill Coursera, \textit{Jul 2023}
+    \item Django for Everybody Specialization \hfill Coursera, \textit{Jul 2023}
     \begin{itemize}
         \item Django, SQLite3, HTML5, CSS, JavaScript, Bash
     \end{itemize}
     \item Passed Probability exam \hfill Society of Actuaries, \textit{May 2023}
 \end{itemize}
+
 \vspace{0.5mm}
 
 %==== Skills ====%
