--- a/cv/cv IT/DonLim_resumeCV.tex
+++ b/cv/cv IT/DonLim_resumeCV.tex
@@ -120,18 +120,18 @@ right=0.7in
 %==== Experience ====%
 
 IT professional with expertise in enterprise systems, data integration, and troubleshooting across finance and operations. Skilled in IBM TM1/Planning Analytics, SQL, Python, and Salesforce, with experience in ETL automation, system administration, and performance optimization. Adept at building and maintaining scalable solutions that enhance forecasting, reporting, and data accuracy. Transitioned from IT into financial systems to apply technical, analytical, and problem-solving skills in business-critical environments. Pursued a Ph.D. at Texas Tech University before earning a terminal master’s degree focused on econometrics and optimization. \\
-
 \vspace{0.5mm}
+
 \header{Work Experience} \\
 \vspace{0.5mm}
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Oct 2025} \\
 % \hfill \textit{(Unofficially assisted starting Oct 2023)}
 \begin{itemize}
-    \item Developed IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git); enhancing processes to allow for daily instead of biannual forecasting cycles
-    \item Managed and restored Git repository backups for processes and rules, including compiling quarterly reports on change tracking and change management for SOX/ITGC audit controls
-    \item Programmatically created, manipulated, and maintained 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views into IBM TM1/Planning Analytics development, UAT, and production environments using a combination of mutltidimensional expressions (MDX), SQL, TurboIntegrator (TI) processes, and TM1 rules
-    \item Extracted, transformed, and loaded (ETL) job scrub, P\&L, SGM, GL, KPIs, statistical entries, and budget data while automating entries for actual and calculating forecasted cash flows, KPIs, and milestones for financial models and reporting 
+    \item Developed IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, integrating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git) to enable daily forecasting cycles in place of biannual updates  
+    \item Managed and restored Git repository backups for processes and rules, preparing quarterly reports on change tracking and management to support SOX and ITGC audit compliance  
+    \item Programmatically built and maintained 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across IBM TM1/Planning Analytics development, UAT, and production environments using MDX, SQL, TurboIntegrator (TI), and TM1 rules  
+    \item Designed and automated ETL workflows to process P\&L, SGM, GL, KPI, statistical, and budget data, improving accuracy and efficiency in cash flow, KPI, and milestone forecasting for financial reporting  
 \end{itemize}
 \vspace{0.5mm}
 
