--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -119,7 +119,7 @@ right=0.7in
 \end{raggedright}
 %==== Experience ====%
 
-Financial systems analyst with a proven record in financial systems, business analytics, and process automation. Experienced in IBM TM1/Planning Analytics, Salesforce CRM, SQL, and Python. Skilled at improving forecasting accuracy, financial reporting, and cross-departmental workflows through data-driven solutions. Transitioned from IT to finance to bridge technology and business operations. Pursued a Ph.D. at Texas Tech University before earning a terminal master’s degree, uniting academic research and technical proficiency in econometrics and optimization. \\
+Financial systems analyst with a proven record in financial systems, business analytics, and process automation. Experienced in IBM TM1/Planning Analytics, Salesforce CRM, SQL, and Python. Skilled at improving forecasting accuracy, financial reporting, and cross-departmental workflows through data-driven solutions. Transitioned from IT to finance to bridge technology and business operations. Pursued a Ph.D. at Texas Tech University before earning a terminal master’s degree, uniting academic research and technical proficiency in econometrics and optimization \\
 
 \vspace{0.5mm}
 \header{Work Experience} \\
