--- a/cv/cv IT/DonLim_resumeCV.tex
+++ b/cv/cv IT/DonLim_resumeCV.tex
@@ -119,7 +119,7 @@ right=0.7in
 \end{raggedright}
 %==== Experience ====%
 
-IT professional with expertise in enterprise systems, data integration, and troubleshooting across finance and operations. Skilled in IBM TM1/Planning Analytics, SQL, Python, and Salesforce, with experience in ETL automation, system administration, and performance optimization. Adept at building and maintaining scalable solutions that enhance forecasting, reporting, and data accuracy. Transitioned from IT into financial systems to apply technical, analytical, and problem-solving skills in business-critical environments. Pursued a Ph.D. at Texas Tech University before earning a terminal master’s degree focused on econometrics and optimization. \\
+IT professional with expertise in enterprise systems, data integration, and troubleshooting across finance and operations. Skilled in IBM TM1/Planning Analytics, SQL, Python, and Salesforce, with experience in ETL automation, system administration, and performance optimization. Adept at building and maintaining scalable solutions that enhance forecasting, reporting, and data accuracy. Transitioned from IT into financial systems to apply technical, analytical, and problem-solving skills in business-critical environments. Pursued a Ph.D. at Texas Tech University before earning a terminal master’s degree focused on econometrics and optimization \\
 \vspace{0.5mm}
 
 \header{Work Experience} \\
