--- a/cv/cv IT/DonLim_resumeCV.tex
+++ b/cv/cv IT/DonLim_resumeCV.tex
@@ -219,24 +219,24 @@ IT professional with expertise in enterprise systems, data integration, and trou
 % % \end{itemize}
 % \vspace{0.5mm}
 
-\textbf{Free Market Institute, Texas Tech University} \hfill \textit{Aug 2020 --- May 2022} \\
+\textbf{Free Market Institute, Texas Tech University}, Economic Research Assistant \hfill \textit{Aug 2020 --- May 2022} \\
 % \end{itemize}
 
-\textbf{American Institute for Economic Research} \hfill \textit{Dec 2018 --- May 2019}\\
+\textbf{American Institute for Economic Research}, EC Harwood Visiting Research Fellow \hfill \textit{Dec 2018 --- May 2019}\\
 
-\textbf{Free Market Institute, Texas Tech University} \hfill  \textit{Sep 2018 --- Dec 2018}\\
+\textbf{Free Market Institute, Texas Tech University} Visiting Research Scholar \hfill  \textit{Sep 2018 --- Dec 2018}\\
 % \begin{itemize}
 %     \item Researched and presented master's thesis: economic analysis of open-source communities
 % \end{itemize}
 
-\textbf{Commonwealth Foundation} \hfill \textit{Jan 2017 --- May 2017}\\
+\textbf{Commonwealth Foundation}, Research Fellow \hfill \textit{Jan 2017 --- May 2017}\\
 % \begin{itemize}
 %     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
 %     \item Wrote and edited two weekly publications regarding Pennsylvania's budget and education policy
 %     \item Responded to daily email inquiries regarding subsidies, right-to-work laws, and the state budget
 % \end{itemize}
 
-\textbf{Cato Institute} \hfill \textit{Sep 2016 --- Dec 2016}\\
+\textbf{Cato Institute}, Intern Researcher \hfill \textit{Sep 2016 --- Dec 2016}\\
 % \begin{itemize}
 %     \item Compiled and examined TIMSS and PISA datasets related to national education policy
 %     \item Summarized Capitol Hill proceedings regarding foreign affairs, trade, monetary, and education
