--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -22,8 +22,8 @@
 a4paper,
 top=0.75in,
 bottom=0.75in,
-left=0.7in,
-right=0.7in
+left=0.65in,
+right=0.65in
 }
 
 \pdfgentounicode=1 % make ATS friendly
@@ -130,8 +130,9 @@ Financial systems analyst with a proven record in financial systems, business an
 \begin{itemize}
     \item Enhanced IBM TM1/Planning Analytics financial models to support weekly and daily forecasting cycles, replacing biannual updates
     \item Developed a land cash flow module incorporating uniform, annual, and quarterly cost-to-complete spreads, retainage, and payout schedules—reducing forecast preparation time by 50\%
-    \item Migrated the mortgage forecast model from Excel to Planning Analytics, increasing calculation speed, granularity from business unit to project level, and integrating personnel and headcount assumptions
+    \item Migrated the mortgage forecast model from Excel to Planning Analytics, increasing calculation speed, granularity from business unit to project level, and integrating personnel and headcount assumptions, worked closely with the company controller
     \item Designed dynamic, auto-refreshing dashboards and visualizations for financial managers, the CFO, and board members, replacing SSRS reports and significantly reducing board package preparation time
+    \item Spearheaded newly impelemented Git repository to manage and restore backups for processes and rules. In addition, prepared quarterly reports on change tracking and change management to support SOX and ITGC audit compliance using Git Bash scripts
 \end{itemize}
 \vspace{0.5mm}
 
@@ -139,6 +140,7 @@ Financial systems analyst with a proven record in financial systems, business an
 \begin{itemize}
     \item Implemented and tested Salesforce development, UAT, and production environments, including training for 200+ end users (Salesforce CRM, Marketing Cloud, Sales Cloud, Data Loader) 
     \item Created Salesforce weekly, quarterly, and ad hoc reports, dashboards, email templates, workflows, cadences, and flows for sales and marketing end users and management
+    \item Cleaned, validated, and updated Salesforce data using a combination of SOQL, Postman, Data Loader, and Workbench
     \item System admin for ERP and business applications (Constellation NEWSTAR Sales \& Enterprise, BuildPro, Calendly, DocuSign)
 \end{itemize}
 \vspace{0.5mm}
