--- a/cv/cv IT/DonLim_resumeCV.tex
+++ b/cv/cv IT/DonLim_resumeCV.tex
@@ -22,8 +22,8 @@
 a4paper,
 top=0.75in,
 bottom=0.75in,
-left=0.7in,
-right=0.7in
+left=0.65in,
+right=0.65in
 }
 
 \pdfgentounicode=1 % make ATS friendly
@@ -129,9 +129,10 @@ IT professional with expertise in enterprise systems, data integration, and trou
 % \hfill \textit{(Unofficially assisted starting Oct 2023)}
 \begin{itemize}
     \item Developed IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, integrating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git) to enable daily forecasting cycles in place of biannual updates  
-    \item Managed and restored Git repository backups for processes and rules, preparing quarterly reports on change tracking and management to support SOX and ITGC audit compliance  
+    \item Spearheaded newly impelemented Git repository to manage and restore backups for processes and rules. In addition, prepared quarterly reports on change tracking and change management to support SOX and ITGC audit compliance using Git Bash scripts
     \item Programmatically built and maintained 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across IBM TM1/Planning Analytics development, UAT, and production environments using MDX, SQL, TurboIntegrator (TI), and TM1 rules  
     \item Designed and automated ETL workflows to process P\&L, SGM, GL, KPI, statistical, and budget data, improving accuracy and efficiency in cash flow, KPI, and milestone forecasting for financial reporting  
+    \item Oversaw Workiva and land pro forma integrations with Planning analytics
 \end{itemize}
 \vspace{0.5mm}
 
@@ -139,6 +140,7 @@ IT professional with expertise in enterprise systems, data integration, and trou
 \begin{itemize}
     \item Implemented and tested Salesforce development, UAT, and production environments, including training for 200+ end users (Salesforce CRM, Marketing Cloud, Sales Cloud, Data Loader) 
     \item Created Salesforce weekly, quarterly, and ad hoc reports, dashboards, email templates, workflows, cadences, and flows for sales and marketing end users and management
+    \item Cleaned, validated, and updated Salesforce data using a combination of SOQL, Postman, Data Loader, and Workbench
     \item System admin for ERP and business applications (Constellation NEWSTAR Sales \& Enterprise, BuildPro, Calendly, DocuSign)
 \end{itemize}
 \vspace{0.5mm}
