--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -132,7 +132,7 @@ Financial systems analyst with a proven record in financial systems, business an
     \item Developed a land cash flow module incorporating uniform, annual, and quarterly cost-to-complete spreads, retainage, and payout schedules—reducing forecast preparation time by 50\%
     \item Migrated the mortgage forecast model from Excel to Planning Analytics, increasing calculation speed, granularity from business unit to project level, and integrating personnel and headcount assumptions, worked closely with the company controller
     \item Designed dynamic, auto-refreshing dashboards and visualizations for financial managers, the CFO, and board members, replacing SSRS reports and significantly reducing board package preparation time
-    \item Spearheaded newly impelemented Git repository to manage and restore backups for processes and rules. In addition, prepared quarterly reports on change tracking and change management to support SOX and ITGC audit compliance using Git Bash scripts
+    \item Spearheaded newly implemented Git repository to manage and restore backups for processes and rules. In addition, prepared quarterly reports on change tracking and change management to support SOX and ITGC audit compliance using Git Bash scripts
 \end{itemize}
 \vspace{0.5mm}
 
